--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,6 +9,7 @@ def computeVersionName() {
 
 buildscript {
     repositories {
+        google()
         jcenter()
     }
 
@@ -36,8 +37,6 @@ android {
 
 repositories {
     google()
-    mavenLocal()
-    mavenCentral()
     jcenter()
 }
 
